# weather-ingester

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
ingester/: Dockerfile  archive.py  config.py  extract.py  load.py  main.py  validate.py
sql/: init.sql
